--- a/ListToDo/src/styles.scss
+++ b/ListToDo/src/styles.scss
@@ -13,6 +13,14 @@ body{
     background: $first-background-color;
 }
 
+textarea:focus, input:focus, button{
+    outline: none;
+}
+
+button{
+    cursor: pointer;
+}
+
 ul{
     list-style: none;
 }
