--- a/ListToDo/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/ListToDo/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -3,7 +3,7 @@
     <ul *ngIf="taskList.length">
         <li *ngFor="let item of taskList; let i = index">
             <input type="checkbox" [(ngModel)]="item.checked">
-            <input type="text" [(ngModel)]="item.task">
+            <input type="text" (keyup)="validationInput(item.task, i)" [(ngModel)]="item.task" [ngClass]="{'checked': item.checked}">
 
             <button (click)="deleteItemTaskList(i)">
                 <img src="assets/icons/icon-trash.svg" alt="">
@@ -14,5 +14,5 @@
 </section>
 
 
-<app-todo-input-add-itens></app-todo-input-add-itens>
+<app-todo-input-add-itens (emmitItemTaskList)="setEmmitTaskList($event)"></app-todo-input-add-itens>
 <app-todo-button-delete-all *ngIf="taskList.length" (click)="deleteAllTaskList()"></app-todo-button-delete-all>
